# heat

./: .gitignore  CMakeLists.txt  Grid.cpp  heat.cpp  heat.h  main.cpp
bmp/: grid_to_bmp.cpp
heat/: heat.cpp  heat.h
modules/cpu/: CMakeLists.txt  main.cu
modules/cpu/include/: cpu_calculate.h  cpu_computation_unit.h  thread_pool.h
modules/cpu/src/: cpu_calculate.cpp  cpu_calculate_parallel.cpp  cpu_calculate_parallel_proper.cpp  cpu_computation_unit.cpp  thread_pool.cpp
modules/gpu/: CMakeLists.txt
modules/gpu/include/: gpu_calculate.cuh  gpu_computation_unit.cuh  gpu_functions.cuh  test.h
modules/gpu/src/: gpu_calculate.cu  gpu_computation_unit.cu  gpu_functions.cu  test.cpp
modules/shared/: CMakeLists.txt  main.cu
modules/shared/include/: computation_unit.h  consts.h  grid.cuh  grid_operations.h  util.h
modules/shared/src/: computation_unit.cpp  grid.cpp  grid.cu  grid_operations.cpp  util.cpp
modules/synchronisation/: CMakeLists.txt
modules/synchronisation/include/: synchronisation.h
modules/synchronisation/src/: barrier.h  synchronisation.cpp
output/: grid_to_bmp.cpp  grid_to_bmp.h
src/: Grid.cpp  main.cpp
src/computation/: computation.cpp  computation.h
src/heat/: heat.cpp  heat.h
src/output/: bmp_converter.cpp  bmp_converter.h  grid_to_bmp.cpp
